variables.Variables.scala.error
Erreur de compilation :
Variables:4: error: not found: type int
  avance(nbPas:int)
               ^