variables.Variables.scala.code
var nbPas = 0 
nbPas = nbPas + 1
while(!estSurBiscuit()) {
  avance(nbPas:int)
}
{prendBiscuit()
}
